--- a/servicio-boletas/pom.xml
+++ b/servicio-boletas/pom.xml
@@ -51,7 +51,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -72,5 +78,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
