--- a/servicio-gateway-server/src/main/resources/application.yml
+++ b/servicio-gateway-server/src/main/resources/application.yml
@@ -8,15 +8,31 @@ spring:
           - Path=/api/consultas/**
         filters:
           - StripPrefix=2
+          - EjemploCookie=Hola mi mensaje personalizado, usuario, JacobVega
+#          - name: Ejemplo
+#            args: 
+#              mensaje: Hola mi mensaje personalizado
+#              cookieNombre: usuario
+#              cookieValor: JacobVega
       - id: servicio-alternativas
         uri: lb://servicio-alternativas
         predicates:
           - Path=/api/alternativas/**
         filters:
           - StripPrefix=2
+          - AddRequestHeader=token-request, 123456
+          - AddResponseHeader=token-response, 789123
+          - SetResponseHeader=Content-Type, text/plain
+          - AddRequestParameter=nombre, andres
       - id: servicio-boletas
         uri: lb://servicio-boletas
         predicates:
           - Path=/api/boletas/**
+#          - Header= token, \d+
+#          - Header=Content-Type,application/json
+#          - Method=GET, POST
+#          - Query=color, verde
+#          - Query=color
+#          - Cookie=color, azul
         filters:
           - StripPrefix=2
