Implementación Circuit Breaker

--- a/servicio-eureka/src/main/resources/application.properties
+++ b/servicio-eureka/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+#spring.devtools.livereload.enabled=false
+
+management.endpoints.jmx.exposure.include=*
