--- a/servicio-boletas/pom.xml
+++ b/servicio-boletas/pom.xml
@@ -56,6 +56,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -78,6 +88,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
