--- a/servicio-eureka-server/src/main/resources/application.properties
+++ b/servicio-eureka-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=servicio-eureka
+spring.application.name=servicio-eureka-server
 server.port=8761
 
 eureka.client.register-with-eureka=false
