--- a/servicio-alternativas/src/main/resources/application.properties
+++ b/servicio-alternativas/src/main/resources/application.properties
@@ -4,3 +4,12 @@ server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/bdvotaciones
+spring.datasource.username=postgres
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
