Se dockeriza el proyecto

--- a/servicio-boletas/src/main/resources/application.properties
+++ b/servicio-boletas/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=servicio-boletas
-server.port=${PORT:0}
+#server.port=${PORT:0}
+server.port=8083
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
-#spring.config.import=optional:configserver:
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+#eureka.instance.hostname=host.docker.internal
+eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME}
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}
