--- a/servicio-alternativas/src/main/resources/application.properties
+++ b/servicio-alternativas/src/main/resources/application.properties
@@ -1,15 +1,27 @@
+# URL base del servicio de consultas
+#consulta.service.url=http://localhost:8090
+consulta.service.url=${CONSULTA_SERVICE_URL}
+
 spring.application.name=servicio-alternativas
-server.port=${PORT:0}
+#server.port=${PORT:0}
+server.port=8082
 
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/bdvotaciones
-spring.datasource.username=postgres
-spring.datasource.password=admin123
+#spring.datasource.url=jdbc:postgresql://localhost:5432/bdvotaciones
+#spring.datasource.username=postgres
+#spring.datasource.password=admin123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+#eureka.instance.hostname=host.docker.internal
+eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME}
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}
