--- a/servicio-consultas/src/main/resources/application.properties
+++ b/servicio-consultas/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=servicio-consultas
-server.port=${PORT:0}
+#server.port=${PORT:0}
+server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bdvotaciones?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin123
+#spring.datasource.url=jdbc:mysql://localhost:3306/bdvotaciones?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=admin123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,4 +16,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+eureka.instance.prefer-ip-address=true
+#eureka.instance.hostname=host.docker.internal
+eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME}
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}
