--- a/servicio-gateway-server/src/main/resources/application.properties
+++ b/servicio-gateway-server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=servicio-gateway-server
 server.port=8090
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
+#eureka.client.service-url.defaultZone=http://localhost:876#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+#eureka.instance.hostname=host.docker.internal
+eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME}
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}
